[tool.poetry]
name = "rover"
version = "0.0.1"
description = "Control ArduRover based vehicle"
authors = ["exor2008"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
dronekit = "^2.9.2"
mavproxy = "^1.8.59"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
